skip jruby-rack jar from servlet 3.0 scanning (tld will still happen)